--- a/mise.toml
+++ b/mise.toml
@@ -1,9 +1,10 @@
 [tools]
-python = "3.13.3"
+python = "3.12.3"
 uv = "0.9.4"
 
 [env]
 _.python.venv = { path = ".venv", create = true } 
+PYTHONPATH="{{config_root}}"
 
 
 [tasks."install"]
@@ -12,4 +13,15 @@ run = "uv pip install -r requirements.txt"
 
 [tasks."format:python"]
 description = "Format Python code"
+depends = ["install"]
 run = "uv run python -m autopep8 --in-place --aggressive --recursive ."
+
+[tasks."run:dev"]
+description = "Run the application in development mode"
+depends = ["install"]
+run = "uv run gunicorn -w 4 -b 0.0.0.0:8000 app:app"
+
+[tasks."test"]
+description = "Run all available test"
+depends = ["install"]
+run = "uv run pytest"
