--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
+# Development
 autopep8==2.3.2
+ipykernel
+pytest==8.4.2
+
+# ML
+pandas==2.3.3
+imbalanced-learn==0.14.0
+numpy==2.3.4
+scikit-learn==1.7.2
+
+# App
+flask==3.1.2
+flask-restx==1.3.2
+gunicorn==23.0.0
